Actualización de foto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="contenido">
 		<header>
-			<img src="img/foto.jpeg" alt="foto"">
+			<img src="img/DLF_7581.JPG" alt="foto"">
 			<h1>Curriculum Vitae</h1>
 		</header>
 
